Fixed footer not sticking to the bottom on smaller devices

--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -91,6 +91,16 @@
 	.cart {
 		height: 850px;
 	}
+
+	footer {
+		p {
+			font-size: 14px;
+			line-height: 1.6;
+			position: fixed;
+			bottom: 0;
+			width: 100%;
+		}
+	}
 }
 
 @media only screen and (max-width: 991px) {
@@ -240,6 +250,16 @@
 					}
 				}
 			}
+		}
+	}
+
+	footer {
+		p {
+			font-size: 14px;
+			line-height: 1.6;
+			position: fixed;
+			bottom: 0;
+			width: 100%;
 		}
 	}
 }
@@ -516,6 +536,16 @@
 			padding: 0px 20px;
 			padding-top: 100px;
 			text-align: center;
+		}
+	}
+
+	footer {
+		p {
+			font-size: 14px;
+			line-height: 1.6;
+			position: fixed;
+			bottom: 0;
+			width: 100%;
 		}
 	}
 }
@@ -802,6 +832,9 @@
 		p {
 			font-size: 14px;
 			line-height: 1.6;
+			position: fixed;
+			bottom: 0;
+			width: 100%;
 		}
 	}
 }
